add integration test